Fixed issue with items not showing with a selected item

--- a/frontend/components/dashboard/item-list/ItemList.module.scss
+++ b/frontend/components/dashboard/item-list/ItemList.module.scss
@@ -6,6 +6,7 @@
     }
 }
 .selected {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -18,10 +19,11 @@
     margin: 0;
 
     span {
+        font-size: 14px;
         padding: calc(var(--spacing-senary) * 1.5);
         display: block;
     }
-    button {
+    button:not(.selected>button) {
         background-color: var(--background-quaternary);
         padding: calc(var(--spacing-senary) * 1.5);
         border-radius: 4px;
@@ -29,6 +31,8 @@
         align-items: center;
         gap: var(--spacing-quinary);
         cursor: pointer;
+        position: relative;
+        z-index: 2;
 
         svg {
             width: 8px;
@@ -55,6 +59,14 @@
         border-radius: 4px;
         background-color: var(--background-quaternary);
     }
+}
+.selected-button {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .items {
     padding: var(--spacing-quinary);
